Update format of installation notebook

--- a/docs/installation-linux.ipynb
+++ b/docs/installation-linux.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be14551a",
+   "id": "df2515f7",
    "metadata": {
     "heading_collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd0399f0",
+   "id": "8c181cb8",
    "metadata": {
     "hidden": true
    },
@@ -42,18 +42,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "327d1bf6",
+   "id": "733aa449",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
    },
    "source": [
-    "## Cloning FLOWExaFMM"
+    "### 1) Cloning FLOWExaFMM"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ffeceaa3",
+   "id": "b3d42e76",
    "metadata": {
     "hidden": true
    },
@@ -67,18 +67,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c00487a",
+   "id": "0423827f",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
    },
    "source": [
-    "## Compiling ExaFMM"
+    "### 2) Compiling ExaFMM"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "97759d47",
+   "id": "86eb2095",
    "metadata": {
     "hidden": true
    },
@@ -122,12 +122,12 @@
     "hidden": true
    },
    "source": [
-    "## Setting `CxxWrap` up"
+    "### 1) Setting `CxxWrap` up"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c8f6ea88",
+   "id": "3288f073",
    "metadata": {
     "hidden": true
    },
@@ -169,7 +169,7 @@
     "hidden": true
    },
    "source": [
-    "## Testing `CxxWrap`"
+    "### 2) Testing `CxxWrap`"
    ]
   },
   {
@@ -417,18 +417,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1aa9778",
+   "id": "c2555003",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
    },
    "source": [
-    "## Cloning FLOWExaFMM"
+    "### 3) Cloning FLOWExaFMM"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1bd7910e",
+   "id": "9719df11",
    "metadata": {
     "hidden": true
    },
@@ -448,7 +448,7 @@
     "hidden": true
    },
    "source": [
-    "## Compiling ExaFMM"
+    "### 4) Compiling ExaFMM"
    ]
   },
   {
@@ -538,7 +538,7 @@
     "hidden": true
    },
    "source": [
-    "## BYU Supercomputer"
+    "### BYU Supercomputer"
    ]
   },
   {
@@ -656,12 +656,12 @@
     "hidden": true
    },
    "source": [
-    "## FLOWExaFMM BinaryBuilder"
+    "### FLOWExaFMM BinaryBuilder"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "42dc77dd",
+   "id": "7fe66154",
    "metadata": {
     "hidden": true
    },
