Andrew Tagg's edits for AV summer 2024

--- a/docs/installation-linux.ipynb
+++ b/docs/installation-linux.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e62fd042",
+   "id": "4d47730b",
    "metadata": {},
    "source": [
     "<center>\n",
     "    <span style=\"font-size: 1.0em; color:black\"><b>\n",
-    "        April 15$^\\mathrm{th}$, 2025\n",
+    "        Feb 10$^\\mathrm{th}$, 2023\n",
     "    </b></span>\n",
     "    <br>\n",
     "    <span style=\"font-size: 2.5em; color:black\"><b>\n",
@@ -22,15 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1f43f2e",
-   "metadata": {},
-   "source": [
-    "Tested on Ubuntu 22.04.4 LTS with Julia v1.10.2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fa59dea7",
+   "id": "df2515f7",
    "metadata": {
     "heading_collapsed": true
    },
@@ -40,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20e57a9d",
+   "id": "8c181cb8",
    "metadata": {
     "hidden": true
    },
@@ -50,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90c301e3",
+   "id": "733aa449",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -61,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37ba7d17",
+   "id": "b3d42e76",
    "metadata": {
     "hidden": true
    },
@@ -75,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "945c1643",
+   "id": "0423827f",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af3d2df3",
+   "id": "86eb2095",
    "metadata": {
     "hidden": true
    },
@@ -102,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "968ad33f",
+   "id": "b76baf82",
    "metadata": {
     "heading_collapsed": true
    },
@@ -112,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffb7dd5a",
+   "id": "9dabe125",
    "metadata": {
     "hidden": true
    },
@@ -124,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a7c3da1",
+   "id": "bc6c3cb8",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -135,17 +127,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c97a1892",
+   "id": "3288f073",
    "metadata": {
     "hidden": true
    },
    "source": [
-    "First, we will test that CxxWrap runs correctly in your machine. This package is a Julia wrapper for c++ code. \n",
-    "\n",
+    "First, we will test that CxxWrap runs correctly in your machine. This package is a Julia wrapper for c++ code. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0dc9963",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "Start by adding CxxWrap to Julia:\n",
     "\n",
     "```julia\n",
-    "julia> ] add CxxWrap\n",
+    "julia> ] add CxxWrap@0.11.2\n",
     "```\n",
     "\n",
     "You might get an error complaining that you don't have CMake installed on your system. If so go ahead and get that set up. In a Linux machine it's done with\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e42eb3",
+   "id": "62fd0499",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74f43573",
+   "id": "55215ad8",
    "metadata": {
     "hidden": true
    },
@@ -183,7 +183,7 @@
     "\n",
     "First, create a file named `hello.cpp` with the following C++ code:\n",
     "\n",
-    "```cxx\n",
+    "```\n",
     "#include <string>\n",
     "#include \"jlcxx/jlcxx.hpp\"\n",
     "\n",
@@ -203,24 +203,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8283a561",
+   "id": "13334540",
    "metadata": {
     "hidden": true
    },
    "source": [
-    "In order to compile the code, we need to point the compiler to wherever the CxxWrap include files are. Most likely, they are under the path returned by \n",
+    "In order to compile the code, we need to point the compiler to wherever the CxxWrap and Julia include files are. Most likely, the CxxWrap files are under the path returned by \n",
     "```julia\n",
     "import CxxWrap\n",
     "CxxWrap.prefix_path()\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d52adf76",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "In my case, this is what I get:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9e4ae21d",
+   "id": "382f98a1",
    "metadata": {
     "hidden": true
    },
@@ -228,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "\"/home/edoalvar/.julia/artifacts/5209ca23f516fb3391b885eef717e49b4ee0a268\""
+       "\"/home/edoalvar/.julia/artifacts/a8624c529a0debd7fb53ab8585b87f29afdd6a33\""
       ]
      },
      "execution_count": 1,
@@ -243,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46f52986",
+   "id": "6614ce56",
    "metadata": {
     "hidden": true
    },
@@ -254,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cf286db0",
+   "id": "8f9fcb2e",
    "metadata": {
     "hidden": true
    },
@@ -262,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "\"/home/edoalvar/.julia/juliaup/julia-1.10.2+0.x64.linux.gnu/include/julia\""
+       "\"/home/edoalvar/Programs/julia-1.8.5/include/julia\""
       ]
      },
      "execution_count": 2,
@@ -276,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a24c91b5",
+   "id": "aaea9175",
    "metadata": {
     "hidden": true
    },
@@ -284,8 +292,8 @@
     "Then, we generate the C++ object (called `hello.cpp.o`) with the following command:\n",
     "\n",
     "```bash\n",
-    "JLCXX_H=/home/edoalvar/.julia/artifacts/5209ca23f516fb3391b885eef717e49b4ee0a268/include\n",
-    "JULIA_H=/home/edoalvar/.julia/juliaup/julia-1.10.2+0.x64.linux.gnu/include/julia\n",
+    "JLCXX_H=/home/edoalvar/.julia/artifacts/a8624c529a0debd7fb53ab8585b87f29afdd6a33/include\n",
+    "JULIA_H=/home/edoalvar/Programs/julia-1.8.5/include/julia\n",
     "\n",
     "# Compile object hello.cpp.o\n",
     "c++ -DJULIA_ENABLE_THREADING -Dhello_EXPORTS -I$JLCXX_H -I$JULIA_H \\\n",
@@ -297,32 +305,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a3b1e9e",
+   "id": "b3f61e6e",
    "metadata": {
     "hidden": true
    },
    "source": [
-    "> **NOTE:** Make sure you are using an updated version of `gcc` (`gcc --version` must show 7.3 or newer).\n",
-    "\n",
-    "> **NOTE 2:** `JLCXX_H` and `JULIA_H` can be automatically defined in the command line as follows\n",
-    "> ```bash\n",
-    "> JLCXX_H=$(julia --print \"import CxxWrap; CxxWrap.prefix_path()\")\n",
-    "JLCXX_H=${JLCXX_H%\\\"}; JLCXX_H=${JLCXX_H#\\\"}; JLCXX_H=$JLCXX_H/include\n",
-    "> \n",
-    "> JULIA_H=$(julia --print \"abspath(Sys.BINDIR, Base.INCLUDEDIR)\")\n",
-    "JULIA_H=${JULIA_H%\\\"}; JULIA_H=${JULIA_H#\\\"}; JULIA_H=$JULIA_H/julia\n",
-    "> ```"
+    "> **NOTE:** Make sure you are using an updated version of `gcc` (`gcc --version` must show 7.3 or newer)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "257f3889",
+   "id": "93f391ba",
    "metadata": {
     "hidden": true
    },
    "source": [
-    "In order to convert the object into a shared library, we will have to point the compiler to where both `libcxxwrap_julia.so` and `libjulia.so` are. We then generate the shared library `libhello.so` through the following command:\n",
+    "> **NOTE 2:** `JLCXX_H` and `JULIA_H` can be automatically defined in the command line as follows\n",
+    "```bash\n",
+    "JLCXX_H=$(julia --print \"import CxxWrap; CxxWrap.prefix_path()\")\n",
+    "JLCXX_H=${JLCXX_H%\\\"}; JLCXX_H=${JLCXX_H#\\\"}; JLCXX_H=$JLCXX_H/include\n",
     "\n",
+    "JULIA_H=$(julia --print \"abspath(Sys.BINDIR, Base.INCLUDEDIR)\")\n",
+    "JULIA_H=${JULIA_H%\\\"}; JULIA_H=${JULIA_H#\\\"}; JULIA_H=$JULIA_H/julia\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48cbf335",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "In order to convert the object into a shared library, we will have to point the compiler to where both `libcxxwrap_julia.so` and `libjulia.so` are. We then generate the shared library `libhello.so` through the following command:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a9fe27d",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "```bash\n",
     "JLCXX_LIB=${JLCXX_H}/../lib/\n",
     "JULIA_LIB=${JULIA_H}/../../lib/\n",
@@ -331,46 +355,69 @@
     "c++  -fPIC  -march=native -Wunused-parameter -Wextra -Wreorder -std=gnu++1z -O3 -DNDEBUG  \\\n",
     "-shared -Wl,-soname,libhello.so -o libhello.so hello.cpp.o \\\n",
     "-Wl,-rpath,: -L${JLCXX_LIB} -lcxxwrap_julia -L${JULIA_LIB} -ljulia\n",
-    "```\n",
-    "\n",
-    "In summary,\n",
-    "* `JULIA_H` must point to the directory that contains `julia.h`.\n",
-    "* `JLCXX_H` must point to the directory that contains `jlcxx/jlcxx.hpp`.\n",
-    "* `JULIA_LIB` must point to the directory that contains `libjulia.so.1` (or whatever version of libjulia you have there).\n",
-    "* `JLCXX_LIB` must point to the directory that contains `libcxxwrap_julia.so.0.12.2` (or whatever version of libcxxwrap you found)."
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8f6f60d2",
+   "id": "1ae4b2f4",
    "metadata": {
     "hidden": true
    },
    "source": [
-    "Now, we test that the C++ code was successfully compiled by importing the `libhello` library into Julia and calling its `greet()` function. Open the Julia REPL and paste the following lines:\n",
-    "\n",
+    "In summary,\n",
+    "* `JULIA_H` must point to the directory that contains `julia.h`.\n",
+    "* `JLCXX_H` must point to the directory that contains `jlcxx/jlcxx.hpp`.\n",
+    "* `Julia_LIB` must point to the directory that contains `libjulia.so.1` (or whatever version of libjulia you have there).\n",
+    "* `JLCXX_LIB` must point to the directory that contains `libcxxwrap_julia.so.0.8.3` (or whatever version of libcxxwrap you found)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acfb465a",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "Now, we test that the C++ code was successfully compiled by importing the `libhello` library into Julia and calling its `greet()` function. Open the Julia REPL and paste the following lines:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25250469",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "```julia\n",
     "# Load the module and generate the functions\n",
     "module CppHello\n",
-    "    using CxxWrap\n",
+    "  using CxxWrap\n",
+    "  @wrapmodule(\"./libhello\")\n",
     "\n",
-    "    @wrapmodule( () -> \"./libhello\" )\n",
-    "\n",
-    "    function __init__()\n",
+    "  function __init__()\n",
     "    @initcxx\n",
-    "    end\n",
+    "  end\n",
     "end\n",
     "\n",
     "# Call greet and show the result\n",
     "@show CppHello.greet()\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2485685",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "This should have returned a heart-warming Hello World."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d5624e74",
+   "id": "c2555003",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -381,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0538804d",
+   "id": "9719df11",
    "metadata": {
     "hidden": true
    },
@@ -395,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c991c8b1",
+   "id": "048c9e41",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -406,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64a8a99f",
+   "id": "2684d827",
    "metadata": {
     "hidden": true
    },
@@ -414,16 +461,32 @@
     "Before compiling `ExaFMM`, make sure you have an mpi library in your system for parallel processing. In Ubuntu you can install the development tools of `OpenMPI` with the following command:\n",
     "```bash\n",
     "sudo apt-get install openmpi-bin openmpi-common libopenmpi-dev\n",
-    "```\n",
-    "\n",
-    "Now, go to wherever you cloned FLOWExaFMM. In order to compile FLOWExaFMM wrapped with `libcxxwrap`, first we need to find the flags `JULIA_H`, `JLCXX_H`, `JULIA_LIB`, and `JLCXX_LIB` inside the build script file `build.sh`, and point them to the paths that we determined in the \"Hello, World\" example (see previous section).\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2952e3d",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "Now, go to wherever you cloned FLOWExaFMM. In order to compile FLOWExaFMM wrapped with `libcxxwrap`, first we need to find the flags `JULIA_H`, `JLCXX_H`, `JULIA_LIB`, and `JLCXX_LIB` inside the build script file `build.sh`, and point them to the paths that we determined in the \"Hello, World\" example (see previous section)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d86abea",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "Now go to the root level of the `FLOWExaFMM` folder and run the command `sh build.sh`. If everything went well, this script will compile and generate a shared library `fmm.so` under `src/` in the `FLOWExaFMM` package."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1ec6e631",
+   "id": "a2900447",
    "metadata": {
     "heading_collapsed": true
    },
@@ -433,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61cbbb5f",
+   "id": "f5a42a60",
    "metadata": {
     "hidden": true
    },
@@ -459,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18f24096",
+   "id": "12f36d03",
    "metadata": {
     "heading_collapsed": true
    },
@@ -469,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46bee0c9",
+   "id": "1474ecfd",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -480,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a21efabc",
+   "id": "c8173f63",
    "metadata": {
     "hidden": true
    },
@@ -490,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9de6a678",
+   "id": "cd5c2edf",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -501,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1178c81",
+   "id": "4af0b41a",
    "metadata": {
     "hidden": true
    },
@@ -531,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a6457ea",
+   "id": "5b21c4cf",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -542,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e0a7af",
+   "id": "210cc3e7",
    "metadata": {
     "hidden": true
    },
@@ -561,12 +624,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e872171",
+   "id": "b5ed42da",
    "metadata": {
     "hidden": true
    },
    "source": [
-    "If useful, here is the compilation instruction that worked for me:\n",
+    "If useful, here is the compilation instruction that worked for me:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b92bb7a3",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "```bash\n",
     "mpicxx -DHAVE_CONFIG_H -DJULIA_ENABLE_THREADING -Dhello_EXPORTS -I/fslhome/edoalvar/.julia/artifacts/16e1de4679fb8520a8af4e6831c7c8e9893d18b4/include -I/apps/julia/1.6.1/gcc-10.2.0/include/julia -march=broadwell -Wunused-parameter -Wextra -Wreorder -std=gnu++1z -O3 -DNDEBUG -fPIC -I. -I..  -DEXAFMM_WITH_OPENMP  -msse3 -mavx -mavx2 -DNDEBUG -DEXAFMM_EAGER  -ffast-math -funroll-loops -fabi-version=6 -Wfatal-errors -fopenmp  -g -O2  -MT fmm-fmm.o -MD -MP -MF .deps/fmm-fmm.Tpo -c -o fmm-fmm.o `test -f 'fmm.cxx' || echo './'`fmm.cxx\n",
     "\n",
@@ -578,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "990ef506",
+   "id": "64e80209",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -589,14 +661,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adcd54c8",
+   "id": "7fe66154",
    "metadata": {
     "hidden": true
    },
    "source": [
-    "A first stab at generating binary files with BinaryBuilder.\n",
-    "\n",
-    "`https://github.com/byuflowlab/FLOWExaFMM` commit `43c5eecf454f73b828e2536702f8f7d3c6c5889e`\n",
+    "A first stab at generating binary files with BinaryBuilder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c222518",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "`https://github.com/byuflowlab/FLOWExaFMM` commit `43c5eecf454f73b828e2536702f8f7d3c6c5889e`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60b3ba7b",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "* Binary dependencies: `libcxxwrap_julia`, `libjulia`, `OpenMPI`, `MPICH_jll`, `MicrosoftMPI_jll`, `LLVMOpenMP_jll`\n",
     "* Project name: `FLOWExaFMM`\n",
     "* Version: `2.1.0`\n",
@@ -605,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "522c1ec8",
+   "id": "74487a58",
    "metadata": {
     "hidden": true
    },
@@ -629,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "419ac000",
+   "id": "164fa2a4",
    "metadata": {
     "hidden": true
    },
@@ -650,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10ebebb5",
+   "id": "c32685c5",
    "metadata": {
     "hidden": true
    },
@@ -664,15 +753,15 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Julia 1.10.2 (14 threads) 1.10.2",
+   "display_name": "Julia 1.8.5",
    "language": "julia",
-   "name": "julia-1.10.2-_14-threads_-1.10"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.2"
+   "version": "1.8.5"
   }
  },
  "nbformat": 4,
